# pseudo_uniform_generator

./: CMakeLists.txt  Makefile_intel  Makefile_plot  PRNG_uniform.c  README.md  UniPRNG.h  histogram.gnuplot  histogram_generator.c  main.c  mean_vs_batch.gnuplot  pseudo_uniform_generator-intel  sample_mean_calc.c  sample_variance_calc.c  sort_compare.c  variance_vs_batch.gnuplot
